nohup.out
/usr/local/lib/python3.10/dist-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: '/usr/local/lib/python3.10/dist-packages/torchvision/image.so: undefined symbol: _ZN3c1017RegisterOperatorsD1Ev'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?
  warn(
Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]Loading checkpoint shards: 100%|██████████| 3/3 [00:00<00:00, 112.59it/s]
Loaded pretrained model gemma-2-2b into HookedTransformer
Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]Loading checkpoint shards:  50%|█████     | 1/2 [00:02<00:02,  2.59s/it]Loading checkpoint shards: 100%|██████████| 2/2 [00:02<00:00,  1.34s/it]
  File "/root/head_swap/sweep_heads.py", line 39
    if (layer, head)
                    ^
SyntaxError: expected ':'
/usr/local/lib/python3.10/dist-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: '/usr/local/lib/python3.10/dist-packages/torchvision/image.so: undefined symbol: _ZN3c1017RegisterOperatorsD1Ev'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?
  warn(
Fetching 3 files:   0%|          | 0/3 [00:00<?, ?it/s]Fetching 3 files:  33%|███▎      | 1/3 [00:14<00:29, 14.50s/it]Fetching 3 files: 100%|██████████| 3/3 [00:14<00:00,  4.84s/it]
Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]Loading checkpoint shards: 100%|██████████| 3/3 [00:00<00:00, 110.90it/s]
Loaded pretrained model gemma-2-2b into HookedTransformer
Fetching 2 files:   0%|          | 0/2 [00:00<?, ?it/s]Fetching 2 files:  50%|█████     | 1/2 [00:10<00:10, 10.85s/it]Fetching 2 files: 100%|██████████| 2/2 [00:10<00:00,  5.43s/it]
Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]Loading checkpoint shards:  50%|█████     | 1/2 [00:02<00:02,  2.30s/it]Loading checkpoint shards: 100%|██████████| 2/2 [00:02<00:00,  1.18s/it]
Loaded pretrained model gemma-2-2b-it into HookedTransformer
Layer 20, head 7
Layer 21, head 0
Layer 21, head 1
Layer 21, head 2
Layer 21, head 3
Layer 21, head 4
Layer 21, head 5
Layer 21, head 6
Layer 21, head 7
Layer 22, head 0
Layer 22, head 1
Layer 22, head 2
Layer 22, head 3
Layer 22, head 4
Layer 22, head 5
Layer 22, head 6
Layer 22, head 7
Layer 23, head 0
Layer 23, head 1
Layer 23, head 2
Layer 23, head 3
Layer 23, head 4
Layer 23, head 5
Layer 23, head 6
Layer 23, head 7
Layer 24, head 0
Layer 24, head 1
Layer 24, head 2
Layer 24, head 3
Layer 24, head 4
Layer 24, head 5
Layer 24, head 6
Layer 24, head 7
Layer 25, head 0
Layer 25, head 1
Layer 25, head 2
Layer 25, head 3
Layer 25, head 4
Layer 25, head 5
Layer 25, head 6
Layer 25, head 7
